# binfield_matrix.rs

./: Cargo.toml  Readme.md
src/: lib.rs
