[package]
name = "binfield_matrix"
version = "0.2.0"
authors = ["Mick Koch <mick@kochm.co>"]
description = "Vector-matrix multiplication for GF(2) codes"
license = "MIT"
documentation = "https://docs.rs/binfield_matrix"
repository = "https://github.com/kchmck/binfield_matrix.rs"
keywords = ["ecc", "fec", "binary", "field", "matrix"]

[dependencies]

num-traits = "0.2"
